# pandg

./: CMakeLists.txt  MyDialog.cpp  MyDialog.h  MyFrame.cpp  MyFrame.h  MyPanel.cpp  MyPanel.h  MyPrintout.cpp  MyPrintout.h  main.cpp  readme.md  res.h  res.rc
